# py-django

./: .gitignore  README.md  bkp-env.txt  dev.sqlite3  manage.py  pyproject.toml
.github/: FUNDING.yml
_config/: settings.py  urls.py
_docker/mariadb/: docker-compose.yaml
_docker/mysql/: docker-compose.yaml
_docker/postgresql/: docker-compose.yaml
_docker/redis/: docker-compose.yaml
accounts/: tests.py  urls.py  views.py
accounts/templates/accounts/: profile.html
base/: models.py
base/templates/: 403.html  404.html  500.html
base/templates/base/: change-lang.html  is-authenticated.html  messages.html  navbar.html
base/templates/registration/: logged_out.html  login.html  password_reset_complete.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt
base/templatetags/: example.py
docker/mariadb/: README.md  docker-compose.yaml
docker/memcached/: docker-compose.yaml
docker/mysql/: README.md  docker-compose.yaml
docker/postgresql/: README.md  docker-compose.yaml
home/: sitemaps.py  urls.py  views.py
home/static/home/js/: main.js
home/templates/home/: home.html
locale/pt_BR/LC_MESSAGES/: django.po  djangojs.po
src/_config/: settings.py
src/accounts/: forms.py
src/accounts/templates/accounts/: signup.html  update.html
src/base/templates/: 400.html
src/base/templates/base/: base.html  footer.html  form.html  navbar.html
src/base/templates/registration/: password_reset_confirm.html  password_reset_form.html
src/locale/pt_BR/LC_MESSAGES/: django.po
